fixed dark mode coloring endgame

--- a/Frontend/src/components/game/EndGame.module.sass
+++ b/Frontend/src/components/game/EndGame.module.sass
@@ -193,7 +193,7 @@ table
     flex-direction: column
 
 .createLink
-    border: solid 1px black
+    border: solid 1px var(--text-color)
     display: inline-block
     border-radius: 0.5em
     padding: 0.5em
@@ -207,13 +207,15 @@ table
         border-color: var(--text-disabled)
 
 .yourName
+    color: var(--text-color)
+    background-color: var(--background-color)
+    border: None
+    border-bottom: solid 1px var(--text-color)
     width: 90%
     font-size: 0.90rem
     vertical-align: center
     height: 2em
-    border: None
     display: inline-block
-    border-bottom: solid 1px black
     text-align: center
     // padding-top: 1.2em
     margin: 0 auto
